Revision history for HTML::Forms

          - Adds more JS rendered field types
          - Adds EmptyDiv for JS rendering
          - Field constructors for attributes now methods not functions
          - Just throw exceptions from Manager
          - Field default_over_obj now just a bool
          - Moves get_body_parameters to Context
          - Moved onReady function to utils
          - Buttons now position on the right when required
          - Renames JS files
          - Adds drag title and icons to DataStructure field type
          - Adds Selector field type
          - Adds reveal password
          - Moves repeatable JS to utils
          - Inline server field validation
          - Shiny buttons
          - Adding Digits field type
          - Better error messages
          - Renamed Forms before/after build to before/after build fields
          - Regenerate meta data
          - Adds empty English lexicon
          - Hiding adds/remove class. Leaves display alone
          - Adds Image field. Adds showIfRequired
          - Better styling on form errors
          - CSS fonts
          - Label and colon right CSS improved
          - Started adding pod
          - Fiddled with label right
          - Better styling
          - Constants exports username
          - Adds timezone field
          - Looks labels up on the model
          - Adds action to forms
          - Focuses first form field
          - Minor style improvements
          - Switched to using less
          - Added sequence number to JS files
          - Reduced to using just one exporter
          - Updated dependencies
          - Moved MCat to own distribution
          - Made toke lifetime a config option
          - Adds tags to artist
          - Adds table row traits to MCat
          - Adds an API. Table preferences. JS column traits
          - Adds time zone handling to date field
          - Added config loader role
          - MCat complete