@@ -61,6 +61,12 @@ form.classic {
         th {
             font-family: #fonts[system]; font-size: 0.8rem; font-weight: normal;
         }
+        tr {
+            vertical-align: top;
+        }
+        .ds-field {
+            display: flex; flex-direction: column;
+        }
         .ds-field.hide, .ds-reorderable.hide, .ds-remove.hide {
             display: none;
         }
@@ -72,6 +78,12 @@ form.classic {
         }
         .ds-reorderable .knob {
             display: block; height: 20px; width: 20px;
+        }
+        .ds-tag {
+            border-bottom: 1px solid #colours[line];
+        }
+        tr:last-child .ds-tag {
+            border-bottom: none;
         }
     }
     .form-wrapper {
